--- a/app/src/main/res/layout/activity_emailauth.xml
+++ b/app/src/main/res/layout/activity_emailauth.xml
@@ -15,17 +15,33 @@
         android:id="@+id/authimageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="fitEnd"
+        app:layout_constraintBottom_toTopOf="@+id/authprimaryback"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/splash"
-        tools:ignore="ContentDescription,MissingConstraints" />
+        tools:ignore="ContentDescription" />
+
+    <View
+        android:id="@+id/authprimaryback"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toBottomOf="@+id/authimageview"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -47,103 +63,88 @@
                     android:id="@+id/titleText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="50dp"
                     android:text="@string/app_name"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="30sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/fieldEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                     android:autofillHints=""
-                    android:backgroundTint="@color/colorWhite"
-                    android:hint="@string/hint_email"
+                    android:background="@drawable/customtextfield"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/colorWhite"
-                    android:textColorHint="@color/colorWhite"
-                    android:theme="@style/EditTextColorControl" />
+                    android:paddingStart="15dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorGray"
+                    android:textSize="16sp"
+                    android:theme="@style/EditTextColorControl"
+                    tools:ignore="RtlSymmetry" />
 
                 <EditText
                     android:id="@+id/fieldPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_marginStart="30dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="30dp"
                     android:autofillHints=""
-                    android:backgroundTint="@color/colorWhite"
-                    android:hint="@string/hint_password"
+                    android:background="@drawable/customtextfield"
+                    android:hint="@string/password"
                     android:inputType="textPassword"
-                    android:textColor="@color/colorWhite"
-                    android:textColorHint="@color/colorWhite"
-                    android:theme="@style/EditTextColorControl" />
+                    android:paddingStart="15dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorGray"
+                    android:textSize="16sp"
+                    android:theme="@style/EditTextColorControl"
+                    tools:ignore="RtlSymmetry" />
 
-                <LinearLayout
-                    android:id="@+id/emailPasswordButtons"
+                <Button
+                    android:id="@+id/emailSignInButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="30dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp">
+                    android:layout_marginEnd="30dp"
+                    android:background="@drawable/registerbutton"
+                    android:text="@string/login"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16sp"
+                    tools:ignore="ButtonStyle" />
 
-                    <Button
-                        android:id="@+id/emailCreateAccountButton"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@color/colorPrimary"
-                        android:text="@string/create_account"
-                        android:textColor="@color/colorWhite"
-                        tools:ignore="ButtonStyle" />
-
-                    <Button
-                        android:id="@+id/emailSignInButton"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="20dp"
-                        android:layout_weight="1"
-                        android:background="@color/colorPrimary"
-                        android:text="@string/sign_in"
-                        android:textColor="@color/colorWhite"
-                        tools:ignore="ButtonStyle" />
-
-                </LinearLayout>
-
-                <LinearLayout
+                <Button
+                    android:id="@+id/emailSignUpButton"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="30dp"
+                    android:background="@drawable/nextbutton"
+                    android:text="@string/signup"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    tools:ignore="ButtonStyle" />
+
+                <TextView
+                    android:id="@+id/sendresetpassbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
                     android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/sendresetpassbutton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:gravity="center"
-                        android:text="@string/forget_password"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/topprivacypolicy"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginBottom="50dp"
-                        android:gravity="center"
-                        android:text="@string/privacypolicy"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="14sp" />
-                </LinearLayout>
+                    android:text="@string/forget_password"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16sp" />
 
             </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
 
     <com.google.android.gms.ads.AdView
