--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,12 +86,12 @@
             <Button
                 android:id="@+id/backbutton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/onbutton"
                 android:text="@string/switchback"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorWhite"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/switchbox"
@@ -101,12 +101,12 @@
             <Button
                 android:id="@+id/gobutton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/offbutton"
                 android:text="@string/switchgo"
-                android:textColor="@color/colorLightGray"
+                android:textColor="@color/colorWhite"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/switchbox"
@@ -116,12 +116,12 @@
             <Button
                 android:id="@+id/timestartbutton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/onbutton"
                 android:text="@string/timestart"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorWhite"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -131,12 +131,12 @@
             <Button
                 android:id="@+id/timestopbutton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/offbutton"
                 android:text="@string/timestop"
-                android:textColor="@color/colorLightGray"
+                android:textColor="@color/colorWhite"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
